--- a/views/index.njk
+++ b/views/index.njk
@@ -4,5 +4,6 @@
     <h1>{{title}}</h1>
     <p>{{message}}</p>
     <a href="about">About pagen</a>
+    <a href="greeting">Greeting</a>
 </main>
 {% endblock %}
