i didnt get anywhere

--- a/views/about.njk
+++ b/views/about.njk
@@ -5,6 +5,6 @@
     <p>{{message}}</p>
     <a href="https://github.com/OliverEklund"> Mitt Github</a>
     <a href="/">Tillbaka till huvudsida</a>
-    <img src="/ima.gif" alt="">
+    <img src="/ohima.gif" alt="">
 </main>
 {% endblock %}
