--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,11 @@
 body{
     font-family: sans-serif;
-    font-size: 2rem;
+    font-size: 1rem;
+}
+
+h1{
+    font-size: 2.5rem;
+    font-family:'Times New Roman', Times, serif;
 }
 
 .container{
