--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body{
 
 h1{
     font-size: 2.5rem;
-    font-family:'Times New Roman', Times, serif;
+    font-family: sans-serif;
 }
 
 .container{
