--- a/views/layout.njk
+++ b/views/layout.njk
@@ -7,6 +7,8 @@
     <title>{{title}}</title>
 </head>
 <body>
-    {% block content %} {% endblock %}
+    {% block content %} 
+
+    {% endblock %}
 </body>
 </html>
