--- a/views/movies.njk
+++ b/views/movies.njk
@@ -5,5 +5,14 @@
     <p>{{message}}</p>
     <p>{{movies}}</p>
 
+    <ul>
+        {{ for movie in movies }}
+        <li>
+            <h1>{{ movie.title }}</h1>
+            <p>{{ movie.director }}</p>
+            <p>{{ movie.year }}</p>
+            <p>{{ movie.genre }}</p>
+        </li>
+    </ul>
 </main>
 {% endblock %}
