--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: sans-serif;
     font-size: 1rem;
+    margin: 2.5rem;
 }
 
 h1{
@@ -12,3 +13,14 @@ h1{
     max-width: 56rem;
     margin-inline: auto;
 }
+
+header{
+    background-color: yellow;
+    border: 5px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 15px;
+}
+
