gahhagahgah CSS CSS CSS

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -7,14 +7,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-    <nav>
-        <h2>Episk Webbsida</h2>
-        <ul class="nav-list">
-            <li><a href="/">Home pagen</a></li>
-            <li><a href="About">About pagen</a></li>
-            <li></li><a href="Movies">Movies</a>
-        </ul>
-    </nav>
+    {% include "nav.njk" %}
 
     {% block content %} 
 
