--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: sans-serif;
     font-size: 1rem;
-    margin: 2.5rem;
+    margin: 1rem;
 }
 
 h1{
@@ -14,13 +14,24 @@ h1{
     margin-inline: auto;
 }
 
-header{
-    background-color: yellow;
+nav{
+    background-color: rgb(255, 112, 203);
     border: 5px solid black;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
     border-radius: 15px;
+    margin-inline: 2rem;
 }
 
+.title{
+    width: 40%;
+    margin-inline: 2rem;
+}
+
+.nav-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
